# DevDock

./: .gitignore  FUTURE-FEATURES.md  Package.resolved  Package.swift  README.md  decision-analysis.html  package.json  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  launch.json
Sources/DevDock/: DevDockApp.swift  WindowManager.swift
Sources/DevDock/API/: ANSIParser.swift  APIClient+Deploy.swift  APIClient+Docker.swift  APIClient+Env.swift  APIClient+Git.swift  APIClient+GitHub.swift  APIClient+Ports.swift  APIClient.swift  SSEClient.swift
Sources/DevDock/Dashboard/: DashboardView.swift  ProjectCardView.swift  ProjectDetailView.swift  ProjectGridView.swift  SidebarView.swift
Sources/DevDock/Hotkey/: HotkeyConfig.swift  HotkeyManager.swift
Sources/DevDock/Models/: Common.swift  CustomCommand.swift  Palette.swift  (+1 more)
menubar/: Package.swift  build-app.sh
menubar/.build/: build.db  debug.yaml  release.yaml
menubar/DevDockMenu/: AppState.swift  CommandPaletteWindow.swift  DevDockAPIClient.swift  DevDockMenuApp.swift  HotkeyConfig.swift  HotkeyManager.swift
scripts/: deploy.sh
src/: cli.ts  setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: devdock-server-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkey.rs  main.rs  tray.rs
src/client/: App.tsx  index.html  main.tsx  palette-entry.tsx  palette.html
src/server/: CLAUDE.md  config.ts  contextEngine.ts  index.ts  processManager.ts  security.ts  userConfig.ts  verbEngine.ts  workflowEngine.ts
src/shared/: types.ts
(+420 files in other folders)
